@@ -2,7 +2,6 @@
 Side B :
     - Walking Speed : 0.4 --> 0.7
     - Jumping Speed : 0.5 --> 0.7
-    - Charging Time : 1 --> 2
 
 --------
 
